html mods and js file added

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
     <h1>JS Quiz</h1>
     <p id="questions"></p>
-    <btn id="btn0"></btn>
-    <btn id="btn1"></btn>
-    <btn id="btn2"></btn>
-    <btn id="btn3"></btn>
-</body>
+  <button id="btn0"></button>
+  <button id="btn1"></button>
+  <button id="btn2"></button>
+  <button id="btn3"></button>
 </html>
